[gd_scene load_steps=3 format=2]

[ext_resource path="res://CamArea.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[node name="CamArea" type="Area"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -45.4278, 5.81137, -15.6127 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
fov = 60
angle = Vector3( 0.6, -0.3, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_CamArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CamArea_body_exited"]
